# ropontti-viewer

./: README.md  package-lock.json  package.json
backend/: .gitignore  main.py  pyproject.toml
front/: package-lock.json  package.json
front/assets/: kauppalistat.json  nimet.json  ostoslista2.json  songs.json
front/src/: Stream.js
landing-page/: package-lock.json  package.json
landing-page/assets/: osoitteet.json
landing-page/public/: index.html
landing-page/src/: App.css  App.js  Drawer.js  Icon.js  Sidebar.js  Stream.js  Swipe.js  index.js  route_points.json  route_points_1.json  route_points_2.json  testi_route.json
landing-page/src/components/: Item.js  Modal.js
public/: index.html
src/: App.css  App.js  Drawer.js  Stream.js  route_points_3.json  route_points_all.json
src/components/: Item.js  Modal.js
